--- a/.github/workflows/java-tests.yml
+++ b/.github/workflows/java-tests.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: true
       matrix:
         platform: [ubuntu-latest, windows-latest]
-        jdk_version: ['16']
+        jdk_version: ['15-ea']
         
     runs-on: ${{ matrix.platform }}
     steps:
